##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = pyrdle
version = 0.0.1-dev
description = Play Wordle interactively in the CLI/GUI. Also contains various algorithms to defeat the game.
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/cthoyt/pyrdle
download_url = https://github.com/cthoyt/pyrdle/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/pyrdle/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    caching
    file management

[options]
install_requires =
    matplotlib
    pandas
    seaborn
    tqdm
    english_words
    pyrdle
    rich
    click
    class-resolver

zip_safe = false
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi

[options.entry_points]
console_scripts =
    wordle = pyrdle.play:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120


[bumpversion]
current_version = 0.2.9-dev
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:-(?P<release>[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+(?P<build>[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?
serialize =
    {major}.{minor}.{patch}-{release}+{build}
    {major}.{minor}.{patch}+{build}
    {major}.{minor}.{patch}-{release}
    {major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = production
first_value = dev
values =
    dev
    production

#############################
# Bumpversion Configuration #
# (.bumpversion.cfg)        #
#############################
[bumpverion:part:build]
values = [0-9A-Za-z-]+

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}
