[metadata]
name = pyrdle
version = 0.2.10-dev
description = Play Wordle interactively in the CLI/GUI. Also contains various algorithms to defeat the game.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/cthoyt/pyrdle
download_url = https://github.com/cthoyt/pyrdle/releases
project_urls = 
	Bug Tracker = https://github.com/cthoyt/pyrdle/issues

author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

license = MIT
license_file = LICENSE
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3 :: Only
keywords = 
	caching
	file management

[options]
install_requires = 
	matplotlib
	pandas
	seaborn
	tqdm
	english_words
	pyrdle
	rich
	click
	class-resolver
zip_safe = false
python_requires = >=3.9
packages = find:
package_dir = 
	= src

[options.packages.find]
where = src

[options.extras_require]
docs = 
	sphinx
	sphinx-rtd-theme
	sphinx-click
	sphinx-autodoc-typehints
	sphinx_automodapi

[options.entry_points]
console_scripts = 
	wordle = pyrdle.play:main

[doc8]
max-line-length = 120
